--- a/src/types/CMakeLists.txt
+++ b/src/types/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(srrg_types_library SHARED
 )
 
 target_link_libraries(srrg_types_library
+  yaml-cpp
   ${OpenCV_LIBS}
   ${catkin_LIBRARIES}
 )
