--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_executable(srrg_semantic_mapper_app srrg_semantic_mapper_app.cpp)
+
 target_link_libraries(srrg_semantic_mapper_app
   srrg_semantic_mapper_library
+  srrg_semantic_mapper_viewers_library
   ${OpenCV_LIBS}
   ${catkin_LIBRARIES}
 )
